# rebeca_to_java

org.rebecalang.modeltransformer/: .classpath  .project  README.md  TestCase1.rebeca  TestCase2.rebeca  TestCase3.rebeca  TestCase4.rebeca  TestCase5.rebeca  TrainController.rebeca  TrainController.statespace  TrainController2.rebeca  ping_pong.rebeca  pom.xml
org.rebecalang.modeltransformer/java/TestCase1/src/: A.java  Actors.java  DirectoryCreator.java  Main.java  Message.java  MessageComparator.java  MessageQueue.java  State.java  TimeClass.java
org.rebecalang.modeltransformer/java/TestCase2/src/: Actors.java  DirectoryCreator.java  Main.java  Message.java  MessageComparator.java  MessageQueue.java  Ping.java  Pong.java  State.java  TimeClass.java
org.rebecalang.modeltransformer/java/TestCase3/src/: Actors.java  DirectoryCreator.java  Main.java  Message.java  MessageComparator.java  MessageQueue.java  Ping.java  Pong.java  State.java  TimeClass.java
org.rebecalang.modeltransformer/java/TestCase4/src/: Actors.java  DirectoryCreator.java  Main.java  Message.java  MessageComparator.java  MessageQueue.java  Ping.java  Pong.java  (+2 more)
org.rebecalang.modeltransformer/ros/TrainController/: CMakeLists.txt  package.xml
org.rebecalang.modeltransformer/ros/TrainController/include/TrainController/: BridgeController.h  Train.h
org.rebecalang.modeltransformer/ros/TrainController/launch/: TrainController.launch
org.rebecalang.modeltransformer/ros/TrainController/msg/: Leave.msg
org.rebecalang.modeltransformer/ros/TrainController/src/: BridgeController.cpp  Train.cpp
(+115 files in other folders)
